--- a/GoGreenApp/app/src/main/res/layout/nav_header_user.xml
+++ b/GoGreenApp/app/src/main/res/layout/nav_header_user.xml
@@ -17,19 +17,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/sjsu" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
+        android:textColor="#1A6DB0"
+        android:id="@+id/txt_username"
+        android:text="Go Green App"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:textColor="#1A6DB0"
+        android:id="@+id/txt_email"
+        android:text="" />
 
 </LinearLayout>
