added logout for User

--- a/GoGreenApp/app/src/main/res/layout/service_mylist.xml
+++ b/GoGreenApp/app/src/main/res/layout/service_mylist.xml
@@ -23,13 +23,13 @@
             android:textColor="#1A6DB0"
             android:textSize="32dp" />
 
-        <Switch
+        <!-- <Switch
             android:id="@+id/switch1"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_gravity="right"
             android:gravity="center"
-            android:text="" />
+            android:text="" /> -->
 
 
     </LinearLayout>
