--- a/GoGreenApp/app/src/main/res/layout/nav_header_user.xml
+++ b/GoGreenApp/app/src/main/res/layout/nav_header_user.xml
@@ -7,9 +7,8 @@
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingLeft="40dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -19,20 +18,21 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/sjsu" />
 
-    <TextView
+    <!-- <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textColor="#1A6DB0"
+        android:textSize="21dp"
         android:id="@+id/txt_username"
         android:text="Go Green App"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#1A6DB0"
+        android:textSize="21dp"
         android:id="@+id/txt_email"
-        android:text="" />
+        android:text="NA" />
 
 </LinearLayout>
