--- a/GoGreenApp/app/src/main/res/layout/activity_new_user.xml
+++ b/GoGreenApp/app/src/main/res/layout/activity_new_user.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="FirstName"
+        android:text="Name"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/colorPrimary" />
 
@@ -110,6 +110,7 @@
             <RadioButton
                 android:id="@+id/radioButton2"
                 android:layout_width="match_parent"
+                android:checked="true"
                 android:layout_height="wrap_content"
                 android:text="User" />
         </RadioGroup>
