changes in password field

--- a/GoGreenApp/app/src/main/res/layout/activity_new_user.xml
+++ b/GoGreenApp/app/src/main/res/layout/activity_new_user.xml
@@ -78,6 +78,7 @@
         android:layout_marginTop="5dp"
         android:textColor="@color/colorPrimary"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:hint="Enter Your Password"
         android:text=""
         android:inputType="text" />
