Updated layout file

--- a/GoGreenApp/app/src/main/res/layout/activity_new_user.xml
+++ b/GoGreenApp/app/src/main/res/layout/activity_new_user.xml
@@ -80,8 +80,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:hint="Enter Your Password"
-        android:text=""
-        android:inputType="text" />
+        android:text=""/>
 
     <LinearLayout
         android:layout_width="wrap_content"
